fix switch on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ section{
 }
 
                                                 /* MEDIA REQUEST */
-@media (min-width: 767px){
+@media (min-width: 992px){
     .container{
         width: 45%;
     }
